--- a/demandtestform.html
+++ b/demandtestform.html
@@ -7,6 +7,6 @@
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://docs.google.com/forms/d/e/1FAIpQLSeVhY2uK4bdhGrzXlppCMiWLmWvrFJipiNqfgqtCovvxHQCdQ/viewform?usp=sf_link">link to the Google Form</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://docs.google.com/forms/d/e/1FAIpQLSeVhY2uK4bdhGrzXlppCMiWLmWvrFJipiNqfgqtCovvxHQCdQ/viewform?usp=sf_link">link</a>.</p>
 </body>
 </html>
