--- a/furnishinglist.html
+++ b/furnishinglist.html
@@ -7,6 +7,6 @@
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://docs.google.com/spreadsheets/d/1QXnN5ZTcMpWekuZYXSSE3BxNnPWxE_V0DGfcaDHmRSo/edit?usp=sharing">link to the Google Sheet</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://docs.google.com/spreadsheets/d/1QXnN5ZTcMpWekuZYXSSE3BxNnPWxE_V0DGfcaDHmRSo/edit?usp=sharing">link</a>.</p>
 </body>
 </html>
