--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://NotRocket.Co">link to NotRocket.Co</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://NotRocket.Co">link</a>.</p>
 </body>
 </html>
