--- a/interestform.html
+++ b/interestform.html
@@ -7,6 +7,6 @@
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://docs.google.com/forms/d/e/1FAIpQLSchrkyfRFXkUB-QGgL7IXgtxWFrmRB4nrTzYTLF_R2xe6WbcQ/viewform?usp=sf_link">link to the Google Form</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://docs.google.com/forms/d/e/1FAIpQLSchrkyfRFXkUB-QGgL7IXgtxWFrmRB4nrTzYTLF_R2xe6WbcQ/viewform?usp=sf_link">link</a>.</p>
 </body>
 </html>
