--- a/tour.html
+++ b/tour.html
@@ -7,6 +7,6 @@
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://www.youtube.com/watch?v=qRGETc3wo7M">link to the YouTube video</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://www.youtube.com/watch?v=qRGETc3wo7M">link</a>.</p>
 </body>
 </html>
