--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://NotRocket.Co">
+    <meta http-equiv="refresh" content="0; url=https://www.googletagmanager.com/gtag/js?id=G-F02FQZ9GLY">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://NotRocket.Co">link</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://forms.gle/DscDYLRxSgwvgrcW9">link</a>.</p>
 </body>
 </html>
