--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://www.googletagmanager.com/gtag/js?id=G-F02FQZ9GLY">
+    <meta http-equiv="refresh" content="0; url=https://forms.gle/DscDYLRxSgwvgrcW9">
     <title>Redirecting...</title>
 </head>
 <body>
