--- a/marketresearch.html
+++ b/marketresearch.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://youtu.be/s0-6th9bjw8">
+    <meta http-equiv="refresh" content="0; url=https://youtu.be/LYsdRAFYGQM">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://youtu.be/s0-6th9bjw8">link</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://youtu.be/LYsdRAFYGQM">link</a>.</p>
 </body>
 </html>
