--- a/floorplaninvestigation.html
+++ b/floorplaninvestigation.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://youtu.be/EKzF-3sx4gQ">
+    <meta http-equiv="refresh" content="0; url=https://youtu.be/DNF5FPUtvzw">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://youtu.be/EKzF-3sx4gQ">link</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://youtu.be/DNF5FPUtvzw">link</a>.</p>
 </body>
 </html>
