--- a/remodel.html
+++ b/remodel.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://youtu.be/43kpYUntLd0">
+    <meta http-equiv="refresh" content="0; url=https://youtu.be/AvRpWi8sQso">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://youtu.be/43kpYUntLd0">link</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://youtu.be/AvRpWi8sQso">link</a>.</p>
 </body>
 </html>
