--- a/tour.html
+++ b/tour.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=qRGETc3wo7M">
+    <meta http-equiv="refresh" content="0; url=https://youtu.be/vKY0OKaYEf8">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://www.youtube.com/watch?v=qRGETc3wo7M">link</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://youtu.be/vKY0OKaYEf8">link</a>.</p>
 </body>
 </html>
